--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Spring Boot application properties
 spring.application.name=pomotune
+
+# Database connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5433/pomotune
+spring.datasource.username=postgres
+spring.datasource.password=Theworld77
+
+# JPA properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
